--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body{
     background: #fff;
     border-radius: 15px;
     box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),  0 32px 64px -48px rgba(0,0,0,0.5);
+    position: relative;
 }
 
 .chatbot-popup .chat-header{
@@ -74,6 +75,9 @@ body{
 }
 
 .chat-body{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     padding: 25px 22px;
     height: 460px;
     overflow: auto;
@@ -119,4 +123,49 @@ body{
     color: #fff;
     background: #6D4FC2;
     border-radius: 13px 13px 3px 13px;
+}
+
+.chat-footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: #fff;
+    padding: 15px 22px 20px;
+}
+
+.chat-footer .chat-form{
+    display: flex;
+    align-items: center;
+    background: #fff;
+    border-radius: 32px;
+    outline: 1px solid #cccce5;
+}
+
+.chat-form .message-input{
+    border: none;
+    outline: none;
+    width: 100%;
+    background: none;
+    height: 47px;
+    padding: 0 74px;
+    font-size: 0.95rem;
+}
+
+.chat-form button{
+    height: 35px;
+    width: 35px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1.15rem;
+    color: #fff;
+    flex-shrink: 0;
+    margin-right: 6px;
+    border-radius: 50%;
+    background: #6D4FC2;
+    transition: 0.2 ease;
+}
+
+.chat-form button:hover{
+    background: #593bab;
 }
