--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,9 @@ body{
     margin-bottom: 82px;
     padding: 25px 22px;
     height: 460px;
-    overflow: auto;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #DDD3F9 transparent;
 }
 
 .chat-body .message{
